# TACHYRIUM

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COGNITION.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  RUNTIME.md  TACHYRIUM.md  pyproject.toml
app/: build_briefing.py  classify_subject.py  detect_contradiction.py  generate_candidate_object.py  map_topology.py  object_builder.py  route_candidate_target.py  run_pipeline.py  tachyrium_cli.py
cli/: check_python_runtime.py  validate_candidate_object.py
contracts/: boundary-policy.json
docs/: DEVELOPMENT.md  ENVIRONMENT.md  INDEX.md  INSTALL.md  MAINTENANCE.md  OPERATING_MODEL.md  OPERATOR_HANDBOOK.md  PACKAGING.md  QUICKSTART.md  REPOSITORY_INVENTORY.md  REPO_MAP.md  TESTING.md
fixtures/: candidate-object.valid.json  classification-summary.valid.json  cognition-audit-record.valid.json  cognition-output.valid.json  pipeline-briefing.valid.json  router-candidate.valid.json
prompts/: PROMPT_CONTRACT.md
schemas/: boundary-policy.schema.json  candidate-object.schema.json  cognition-audit-record.schema.json  cognition-output.schema.json  release-manifest.json  repository-inventory.json
tachyrium_pkg/: cli.py  runtime.py
tests/: run_all_smoke.py  test_boundary_policy_schema_smoke.py  test_briefing_smoke.py  test_candidate_object_contract.py  test_candidate_object_schema_smoke.py  test_classifier_smoke.py  test_cli_smoke.py  test_cognition_audit_schema_smoke.py  test_cognition_boundary_negative_assertions.py  test_cognition_contract_smoke.py  test_cognition_minimum.py  test_contradiction_smoke.py  (+9 more)
(+17 files in other folders)
