[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tachyrium"
version = "0.1.0"
description = "Bounded sovereign cognition infrastructure for the Verifrax stack."
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.11"
authors = [
  { name = "Verifrax" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/Verifrax/TACHYRIUM"
Repository = "https://github.com/Verifrax/TACHYRIUM"

[tool.setuptools]
py-modules = []

[tool.tachyrium]
class = "sovereign-cognition-infrastructure"
status = "bounded-foundation"
boundary_manifest = "docs/contracts/BOUNDARY_MANIFEST.md"
release_manifest = "schemas/release-manifest.json"
